# calpreter

./: .gitignore  LICENSE  README.ko.md  README.md  __init__.py  end_finder.py  main.py  parser.py  pyproject.toml  scope.py  tokenizer.py
calpreter/: __init__.py  calculator.py  expression.py  parser.py  scope.py  tokenizer.py
calpreter/operators/: __init__.py  base.py  data.py
operators/: __init__.py  base.py  data.py
tests/: helpers.py  test_constants.py  test_custom.py  test_evaluation.py  test_operators.py  test_scopes.py
