[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "calpreter"
version = "0.1.0"
description = "Compile math expression strings into Python function objects, with variables and implicit multiplication"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ name = "ropmyung", email = "ropmyung@naver.com" }]
keywords = ["expression", "parser", "calculator", "math", "compiler", "interpreter"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development :: Interpreters",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/ropmyung/calpreter"
Repository = "https://github.com/ropmyung/calpreter"
Issues = "https://github.com/ropmyung/calpreter/issues"

[project.optional-dependencies]
test = ["pytest>=7.0"]

[tool.setuptools.packages.find]
include = ["calpreter*"]

[tool.setuptools.package-data]
calpreter = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
